# CI2025_lab1

./: 0-1Knapsack.ipynb  LICENSE  README.md  REVIEW.md  pyproject.toml
